--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,6 +1,6 @@
 name: Deploy my Lambda Function
 
-# trigger on all push events to main branch
+# trigger on all push events to main branch.
 on: 
   push:
     branches:
