--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -29,4 +29,4 @@ jobs:
           npm ci
           npm run build
       - name: deploy files to bucket
-        run: aws s3 cp public s3://${{ env.BUCKET_NAME }} --recursive --acl public-read
+        run: aws s3 cp public s3://cfst-3457-75b6fc44005cbb2e03bc39bd1-nonprodbucket-17y02xj0z0vbp --recursive --acl public-read
