--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      BUCKET_NAME: <Nonproduction bucket name here>
+      BUCKET_NAME: cfst-3457-75b6fc44005cbb2e03bc39bd1-nonprodbucket-17y02xj0z0vbp
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -29,4 +29,4 @@ jobs:
           npm ci
           npm run build
       - name: deploy files to bucket
-        run: aws s3 cp public s3://cfst-3457-75b6fc44005cbb2e03bc39bd1-nonprodbucket-17y02xj0z0vbp --recursive --acl public-read
+        run: aws s3 cp public s3://${{ env.BUCKET_NAME }} --recursive --acl public-read
