--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -18,8 +18,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - name: set up node.js
-        uses: actions/checkout@v2
+      - name: checkout node.js
+        uses: actions/checkout@v3
+      - name: set up node.js 
         uses: actions/setup-node@v3
         with:
           node-version: 16
