--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -26,7 +26,7 @@ jobs:
           node-version: 16
       - name: build it    
         run: |
-          npm ci
+          npm ic
           npm run build
       - name: deploy files to bucket
         run: aws s3 cp public s3://${{ env.BUCKET_NAME }} --recursive --acl public-read
