--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -26,6 +26,8 @@ jobs:
           node-version: 16
       - name: build it    
         run: |
+          pwd
+          ls -la
           npm install
           npm ci
           npm run build
