--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -17,9 +17,7 @@ jobs:
       with:
         node-version: '14'
         cache: 'npm'
-        cache-dependency-path: |
-            server/app/package-lock.json
-            frontend/app/package-lock.json
+        cache-dependency-path: '**/package-lock.json'
     - run: npm ci
     - run: npm test
       
